[gd_scene load_steps=8 format=3 uid="uid://cevmcxbi1p53o"]

[ext_resource type="FontFile" uid="uid://d1pl0sj2fnp7m" path="res://fonts/Micro5-Regular.ttf" id="1_ahhtf"]
[ext_resource type="Script" uid="uid://bu6wi03sgo415" path="res://scenes/hud.gd" id="1_oo0fn"]
[ext_resource type="Texture2D" uid="uid://bsxymrvw7h0h3" path="res://art/game_over.png" id="3_5ysmq"]
[ext_resource type="Texture2D" uid="uid://dukbls3ur5d5" path="res://art/hiscore.png" id="4_6fi6k"]
[ext_resource type="Texture2D" uid="uid://tqrsh4hsxb8h" path="res://art/start_button.png" id="5_uo2fv"]
[ext_resource type="Texture2D" uid="uid://brxujkpwm0u6x" path="res://art/get_ready.png" id="6_047uy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uo2fv"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_oo0fn")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_ahhtf")
theme_override_font_sizes/font_size = 33
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOver" type="TextureRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.0
offset_top = -58.0
offset_right = 47.0
offset_bottom = -39.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_5ysmq")
stretch_mode = 4

[node name="ScoreBox" type="TextureRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.5
offset_top = -29.0
offset_right = 56.5
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_6fi6k")
stretch_mode = 4

[node name="EndScoreLabel" type="Label" parent="ScoreBox"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.875
offset_top = -17.94
offset_right = 5.125
offset_bottom = 5.06
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_ahhtf")
theme_override_font_sizes/font_size = 22
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = 31.95
offset_right = 24.0
offset_bottom = 53.95
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_uo2fv")
icon = ExtResource("5_uo2fv")
flat = true
icon_alignment = 1

[node name="GetReady" type="TextureRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.0
offset_top = -58.0
offset_right = 47.0
offset_bottom = -39.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("6_047uy")
stretch_mode = 4

[node name="FadeScreen" type="ColorRect" parent="."]
visible = false
modulate = Color(0, 0, 0, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
